--- a/jsday7.html
+++ b/jsday7.html
@@ -174,6 +174,9 @@
             })
             .join(' ');
          }
+         const Sentence = "the quick brown fox";
+         const capitalize = firstletter(Sentence);
+         document.write(capitalize);
 
          
 
